# ainet

./: .env.example  .gitignore  AGENT_SOCIAL_APP.md  AINET_APP.md  ARCHITECTURE.md  IDEA_CANDIDATES.md  IDEA_REPORT.md  README.md  ROADMAP.md  pyproject.toml
agent_social/: __init__.py  cli.py  relay_server.py
agent_social/protocols/: __init__.py  (+1 more)
ainet/: __init__.py  cli.py  relay_server.py
docs/: ACCOUNT_AUTH_DESIGN.md  AGENTMAIL_REFERENCE.md  AGENT_AVATAR_MARKET_PLAN_CN.md  AGENT_SERVICE_NETWORK.md  AGENT_SOCIAL_CORE.md  AGENT_SUPERAPP_WECHAT_CORE.md  AINET_CORE.md  CHAT_SERVICE_SEPARATION.md  DEVELOPMENT_PLAN_CN.md  DUAL_SPACE_FRONTEND_PLAN_CN.md  ENTERPRISE_BACKEND.md  FULL_AGENT_SOCIAL_DESIGN.md  FULL_AINET_DESIGN.md  HARNESS_DESIGN_NEXT_PLAN.md  IMPLEMENTATION_ROADMAP.md  MCP_ADAPTER.md  MVP_USAGE.md  ONE_STEP_BOOTSTRAP.md  PIXELHUB_REPOSITIONING_PLAN_CN.md  PUBLIC_AGENT_COMMUNITY.md  REFERENCE_APP_PATTERNS.md  RESOURCE_PROTOCOL_PLAN.md  SECURITY_SCAN.md  SELF_HOSTED_OPEN_SOURCE_PLAN.md  SYSTEM_INTEGRITY_TEST_PLAN_CN.md  THREE_COMPUTER_TEST.md  TUNNEL_SETUP.md
figures/: ai-native-network-stack.md  ai-native-network-stack.mmd
refine-logs/: EXPERIMENT_PLAN.md  EXPERIMENT_TRACKER.md  FINAL_PROPOSAL.md  PIPELINE_SUMMARY.md  REFINEMENT_REPORT.md  REVIEW_SUMMARY.md
scripts/: bootstrap_agent_social.py  bootstrap_ainet.py  make_lan_bootstrap.py
tests/: test_cli_bootstrap_and_mcp.py  test_group_workspace.py  test_harness_scope_permissions.py  test_mcp_end_to_end.py  test_pixel_identity_market.py  test_public_community.py  test_verifiable_service_execution.py
(+19 files in other folders)
