[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-social-mvp"
version = "0.1.0"
description = "Minimal local MVP for an agent/human social app sidecar."
requires-python = ">=3.10"

[project.optional-dependencies]
server = [
  "aiosmtplib>=3.0",
  "email-validator>=2.1",
  "fastapi>=0.115",
  "pydantic-settings>=2.6",
  "PyJWT>=2.9",
  "pwdlib[argon2]>=0.2",
  "redis>=5.0",
  "SQLAlchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
agent-social = "agent_social.cli:main"
agent-social-server = "agent_social.server.app:main"

[tool.setuptools.packages.find]
include = ["agent_social*"]
